deploy/kubernetes/Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cryosparc-deployment
spec:
  replicas: 1 # TODO: Change to 3
  selector:
    matchLabels:
      app: cryosparc
  template:
    metadata:
      labels:
        app: cryosparc
    spec:
      restartPolicy: Always
      securityContext: # Pod security context
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cryosparc
          image: cerit.io/cerit/cryosparc:master-v0.2
          imagePullPolicy: Always
          command: [ "/bin/bash", "-c" ]
          args: [ "/opt/cryosparc_master/entrypoints/entrypoint.sh && while :; do sleep 10000; done" ]
#          env:
#            - name: COMPOSE_HTTP_TIMEOUT
#              value: "480"
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "4Gi"
              cpu: "2"
          securityContext: # Container security context
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: vol-1
              mountPath: /mnt
      volumes:
        - name: vol-1
          persistentVolumeClaim:
            claimName: pvc-cryosparc-scratch
