deploy/kubernetes/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cryosparc-service
  labels:
    name: cryosparc-service # Filter Ingress - spec.rules.http.backend.service.name
spec:
  type: ClusterIP # Default
  selector:
    app: cryosparc-web-deployment # Filter Deployment - spec.template.metadata.labels.app
  # Connecting ports for cryosparc application (8080) and cryosparc web (80)
  ports:
    - name: cryosparc-port
      protocol: TCP
      targetPort: 8080 # ContainerPort - spec.template.spec.containers.ports.containerPort
      port: 80 # Ingress - spec.rules.http.backend.service.port.number
